--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ a {
 .small-button {
   border-radius: 3px;
   padding: 5px 15px;
-   margin-right: 4px;
-   font-weight: bold;
+  margin-right: 4px;
+  font-weight: bold;
 }
 
 .filling-button {
@@ -255,8 +255,8 @@ a {
 #proficiency-table {
   text-align: center;
   animation-duration: 2s;
- /* border: 1px solid purple; */
-  width: 70%;
+  /* border: 1px solid purple; */
+  width: 80%;
   margin: 40px auto 0;
 }
 
@@ -284,8 +284,8 @@ a {
 }
 
 .proficiency-icon {
-  color: var(--dark-grey-color);
-  background-color: var(--white-color);
+  color: var(--white-color);
+  background-color: var(--blue-color);
   width: 30px;
   height: 30px;
   text-align: center;
@@ -293,7 +293,7 @@ a {
   border-radius: 5px;
   margin-right: 12px;
   float: left;
-  
+
 }
 
 .column p {
@@ -451,7 +451,7 @@ a {
   }
 }
 
-.large-button{
+.large-button {
   cursor: pointer;
   width: 250px;
   height: 50px;
@@ -461,7 +461,7 @@ a {
   border: 3px solid var(--dark-grey-color);
   font-size: 30px;
   padding: 2px;
-/*
+  /*
 color: var(--dark-grey-color);
 
   background-size: 100% 200%;
