--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a {
 
 #navbar {
   border: 0;
-  height: 50px;
+  height: 45px;
   border-radius: 0px;
   margin-bottom: 0;
   border: 0;
@@ -73,8 +73,9 @@ a {
   color: var(--white-color);
   float: right;
   padding: 10px 15px;
-  font-size: 20px;
+  font-size: 16px;
 }
+
 
 .navbar-fixed {
   top: 0;
@@ -82,6 +83,7 @@ a {
   position: fixed;
   width: 100%;
 }
+
 
 #welcome-section {
   height: 100vh;
@@ -234,53 +236,78 @@ a {
 }
 
 #about-container {
-  margin: 0px auto;
+  margin: 50px auto 0;
   width: 90%;
   text-align: left;
 }
 
-#about-para {
-  font-size: 20px;
+#about-intro {
+  display: flex;
+  margin: auto;
+  flex-direction: column-reverse;
+  width: 95%;
+  /*border: 1px solid orange;*/
 }
 
+#about-para {
+  font-size: 20px;
+  padding-right: 50px;
+  /*border: 1px solid green;*/
+}
+
+#about-image {
+  /* border: 1px solid var(--light-blue-color);*/
+  height: 300px;
+  text-align: center;
+}
+
+#about-image img {
+  border-radius: 10px;
+  height: 100%;
+}
 
 #proficiency-subheading {
   text-align: center;
   font-size: 40px;
   text-decoration: underline;
   text-decoration-color: var(--blue-color);
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;*/
 }
 
 #proficiency-table {
   text-align: center;
   animation-duration: 2s;
-  /* border: 1px solid purple; */
+  /*border: 1px solid purple;*/
   width: 80%;
-  margin: 40px auto 0;
+  margin: /*40px*/-10px auto ;
 }
+
 
 .left {
   margin-right: 55%;
   display: block;
-  width: 100%;
+
+ /* border: 1px green solid;*/
 }
 
 .right {
   display: block;
-  width: 100%;
+  /*width: 100%; 
+  border: 1px green solid;*/
 }
 
 .proficiency-container {
-  width: 100%;
-  /*border: 1px solid greenyellow;  */
+  /*width: 100%;*/
+ /* border: 1px solid yellow;*/
   padding-bottom: 5px;
+
 }
 
 .proficiency-text {
-  width: 100%;
+
   display: block;
   text-align: right;
+  /*border: 1px solid red;*/
 }
 
 .proficiency-icon {
@@ -356,6 +383,13 @@ a {
 
 .project-base {
   display: grid;
+  /*display: flex;
+
+  flex-direction: column-reverse;*/
+
+  grid-template-columns: 1fr 1fr;
+  /*grid-auto-flow: dense; */
+
   height: auto;
   width: 90%;
   margin: 49px auto 0px;
@@ -365,32 +399,54 @@ a {
   overflow: hidden;
   text-align: center;
   background-color: var(--dark-grey-color);
+ /* border: 1px solid pink;*/
 }
 
 .project-descriptor {
-  width: 90%;
+  /* width: 50%;
   margin: auto;
+  
+   border: 1px solid oldlace;
+   */
+  flex-basis: 100%;
+
+
 }
 
 .project-title {
-  margin: 30px auto 6px;
+  margin: 30px auto 0;
   font-size: 2em;
   color: var(--white-color);
+  padding: 0 20px;
+ /* border: 1px solid orange;*/
 }
 
 .project-skills {
-  margin-bottom: 30px;
+  margin: 10px auto 30px;
+  /*width: 90%;*/
+  padding: 0 20px;
+  text-align: center;
+ /* border: 1px solid yellow;*/
 }
 
 .project-blurb {
   font-size: 14px;
-  margin-bottom: 40px;
-  width: 90%;
+  padding: 0 28px;
+  /*border: 1px solid peru; */
 }
 
 .project-image {
+  /*
+width: 50%; 
+border: 1px solid pink;
+  
+  flex-basis: 100%;
+  margin: 25px auto 0px;*/
   width: 85%;
-  margin: 25px auto 0px;
+  margin: 25px auto 0;
+
+  grid-column-start: 1;
+  grid-row-start: 1;
   transition: all 0.1s ease-out;
 }
 
@@ -398,17 +454,19 @@ a {
   transform: scale(0.97);
 }
 
+/*
 .top-image {
   display: block;
 }
 
 .bottom-image {
   display: none;
-}
+}*/
 
 .button-container {
-  width: 90%;
+
   margin: 40px auto 60px;
+/*  border: 1px solid plum;*/
 }
 
 
@@ -647,7 +705,7 @@ textarea {
 }
 
 #my-email {
-  /*font-size: 15px;*/
+  font-size: 18px;
   margin-top: -10px;
   text-align: center;
 }
@@ -666,6 +724,7 @@ footer {
   margin-bottom: -10px;
 }
 
+
 #footer-icon-1 {
   margin-left: 1%;
   margin-right: 0.5%;
@@ -675,6 +734,7 @@ footer {
   margin-left: 0.5%;
   margin-right: 1%;
 }
+
 
 .fade-to-blue {
   transition: 0.4s ease-in-out;
@@ -763,14 +823,44 @@ footer {
   }
 }
 
+@media only screen and (min-width: 610px) {
+
+  .left {
+    margin-right: 55%;
+    display: inline-block;
+    width: 40%;
+    /*width: 40%;*/
+  }
+
+  .right {
+    display: inline-block;
+    width: 40%;
+     /*width: 40%;*/
+  }
+
+  .proficiency-text {
+    text-align: center;
+  }
+
+}
+
 /* smaller screen */
 @media only screen and (min-width: 768px) {
+
+  #navbar {
+    height: 50px;
+  }
+
+  .navlink {
+    font-size: 20px;
+  }
 
   #intro {
     font-size: 3em;
     padding-top: 9vw;
   }
 
+  /*
   #icons {
     display: block;
   }
@@ -810,16 +900,23 @@ footer {
   .icon-container:hover {
     background-color: var(--blue-color);
   }
+  */
+
+  #about-intro {
+    flex-direction: row;
+  }
 
   .left {
     margin-right: 55%;
-    display: inline-block;
+    /*display: inline-block;
     width: 25%;
+    width: 40%;*/
   }
 
   .right {
     display: inline-block;
-    width: 25%;
+   /* width: 25%;
+     width: 40%;*/
   }
 
   .proficiency-icon {
@@ -831,34 +928,56 @@ footer {
     margin-top: 22px;
   }
 
-  .proficiency-text {
-    text-align: center;
-  }
+ 
 
   .column p {
     font-size: 25px;
   }
 
   .project-base {
-    padding: 40px;
+    flex-direction: row;
+    padding: 0;
     width: 85%;
+    /*border: 1px solid green;*/
+  }
+
+
+  .project-descriptor {
+    /* width: 50%;
+     margin: auto;
+     
+      border: 1px solid oldlace;
+      */
+
+    width: 90%;
+    margin: auto;
+
   }
 
   .project-title {
     font-size: 2.5em;
+    padding: 0;
+  }
+
+  .project-skills {
+    padding: 0;
   }
 
   .project-blurb {
     font-size: 20px;
+    width: 90%;
+    margin: 0 auto 40px;
   }
 
-  .button-container {
-    margin-top: 30px;
-  }
+
 
   .heading {
     font-size: 60px;
     width: 70%;
+  }
+
+  #my-email {
+    font-size: 24px;
   }
 }
 
@@ -874,10 +993,12 @@ footer {
     padding: 12px;
   }
 
+  /*
   .icon-container {
     margin: 10px;
     border: 5px solid var(--white-color);
   }
+*/
 
   #about-container {
     width: 70%;
@@ -890,23 +1011,28 @@ footer {
 
   .project-base {
     text-align: left;
+    padding: 40px;
     grid-template-columns: 1fr 1fr;
   }
 
-  .project-image {
-    margin: 0;
+  .project-skills {
+    text-align: left;
+  }
+
+  .project-blurb {
     width: 100%;
+    padding: 0;
   }
 
-  .top-image {
-    display: none;
+  .button-container {
+    margin: 30px 0;
   }
 
-  .bottom-image {
-    display: block;
-  }
+  .project-image {
+    grid-column-start: 2;
+    /*grid-row-start: 2; */
+    margin: 0;
 
-  #my-email {
-    /*font-size: 30px;*/
+    width: 100%;
   }
 }
