--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ a {
 
 #about-image {
   /* border: 1px solid var(--light-blue-color);*/
-  height: 300px;
+  height: 200px;
   text-align: center;
 }
 
@@ -298,7 +298,7 @@ a {
 
 .proficiency-container {
   /*width: 100%;*/
- /* border: 1px solid yellow;*/
+ border: 1px solid yellow;
   padding-bottom: 5px;
 
 }
@@ -906,17 +906,8 @@ footer {
     flex-direction: row;
   }
 
-  .left {
-    margin-right: 55%;
-    /*display: inline-block;
-    width: 25%;
-    width: 40%;*/
-  }
-
-  .right {
-    display: inline-block;
-   /* width: 25%;
-     width: 40%;*/
+  #about-image {
+    height: 300px;
   }
 
   .proficiency-icon {
@@ -927,8 +918,6 @@ footer {
   .proficiency-container:not(:first-child) {
     margin-top: 22px;
   }
-
- 
 
   .column p {
     font-size: 25px;
@@ -1009,6 +998,8 @@ footer {
     width: 100%;
   }
 
+  
+
   .project-base {
     text-align: left;
     padding: 40px;
@@ -1034,5 +1025,21 @@ footer {
     margin: 0;
 
     width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .left {
+    margin-right: 55%;
+    width: 25%;
+    /*display: inline-block;
+    width: 40%;*/
+  }
+
+  .right {
+    width: 25%;
+   /* 
+    display: inline-block;
+     width: 40%;*/
   }
 }
